# uv-slicer-wasm

./: .prettierignore  .prettierrc  CMakeLists.txt  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: npm-publish.yml
lib/: entry.ts
lib/cpp/: encode_ac.cpp  encode_prz_simd.cpp
lib/cpp/include/: Log.h
lib/cpp/web/: main.cpp  post-script.js
lib/wasm/: uv-slicer.d.ts  uv-slicer.js  uv-slicer.wasm
